[package]
name = "graphql_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.9"
async-graphql-axum = "6.0.9"
async-trait = "0.1.73"
axum = "0.6.20"
futures = { version = "0.3.28", features = ["futures-executor"] }
hyper = "0.14.27"
tokio = { version = "1.32.0", features = ["full"] }
